<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ViewSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_skycolor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/skycolor_label"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_skycolor_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/textView_skycolor_label"
            app:layout_constraintTop_toTopOf="@id/textView_skycolor_label" />

        <TextView
            android:id="@+id/textView_planetSize_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/planetSize_label"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/textView_skycolor_label"
            app:layout_constraintTop_toTopOf="@id/textView_skycolor_label" />

        <TextView
            android:id="@+id/textView_planetSize_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/textView_planetSize_label"
            app:layout_constraintTop_toTopOf="@id/textView_planetSize_label" />

        <TextView
            android:id="@+id/textView_landTypes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/viewSettings_landTypes_label"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView_planetSize_label" />

        <TextView
            android:id="@+id/textView_landTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/textView_landTypes_label"
            app:layout_constraintTop_toTopOf="@id/textView_landTypes_label" />

        <TextView
            android:id="@+id/textView_isPopulated_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/view_label_ispopulated"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/textView_landTypes_label"
            app:layout_constraintTop_toTopOf="@id/textView_landTypes_label" />

        <TextView
            android:id="@+id/textView_isPopulated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/textView_isPopulated_label"
            app:layout_constraintTop_toTopOf="@id/textView_isPopulated_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>